changes flags set default to Collections.emptySet() to comply with java 1.8 for FTC support